--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "name": "react-thook",
-   "version": "1.0.1",
+   "version": "1.0.2",
    "main": "./cjs/index.js",
    "module": "./index.js",
    "types": "./types/index.d.ts",
@@ -17,7 +17,7 @@
    "devDependencies": {
       "@types/react": "^19.0.2",
       "@types/react-dom": "^19.0.2",
-      "makepack": "latest",
+      "makepack": "^1.5.24",
       "react": "^19.0.0",
       "react-dom": "^19.0.0",
       "typescript": "^4.4.2"
